@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2817: Documentation for Groovy UDFs (herberts via julien)
+
 PIG-2492: AvroStorage should recognize globs and commas (cheolsoo via sms)
 
 PIG-2706: Add clear to list of grunt commands (xalan via azaroth)
